--- a/static/style.css
+++ b/static/style.css
@@ -241,3 +241,17 @@ input[type="checkbox"] {
 .btn-back:hover {
   background-color: #135ba1;
 }
+
+.btn-contact {
+  display: inline-block;
+  background-color: #28a745;
+  color: white;
+  padding: 0.7rem 1.2rem;
+  text-decoration: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.btn-contact:hover {
+  background-color: #218838;
+}
