--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,10 @@
       font-size: 1.1rem;
       text-align: center;
       text-decoration: none;
-      flex: 1 1 200px;
-      max-width: 300px;
+      min-width: 150px;
+      max-width: 280px;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .btn:hover {
@@ -70,10 +72,9 @@
       }
 
       .btn {
-        width: 100%;
-        max-width: 90%;
-        padding: 0.6rem 1rem;
         font-size: 1rem;
+        padding: 0.6rem 1rem;
+        max-width: 90%;
       }
     }
   </style>
