--- a/templates/register.html
+++ b/templates/register.html
@@ -49,7 +49,7 @@
 
 </head>
 <body>
-    <h1>定向行動老師註冊申請 🦯</h1>
+    <h1>使用者註冊申請</h1>
 
     <!-- 顯示註冊錯誤或成功訊息 -->
     {% with messages = get_flashed_messages() %}
