--- a/templates/contact_teacher.html
+++ b/templates/contact_teacher.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-  <h1>聯絡老師</h1>
+  <h1>📩 聯絡老師</h1>
   <ul class="notice-text">
     <li>請填寫以下表單，您的訊息將透過系統寄給該老師，<strong>老師的 Email 不會公開顯示</strong>。</li>
   </ul>
