--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -65,8 +65,8 @@
   <ul>
     <li>未註冊登入者可瀏覽地圖圖標之簡要資訊。</li>
     <li>註冊並登入者得以點閱各項詳細資料。</li>
-    <li>所有圖標資料由各定向行動老師自行註冊、建置、修改與刪除，平台僅提供技術支援與服務空間。</li>
-    <li>透過本平台尋找老師的單位或個人，或老師們之間的合作交流，請務必相互尊重，避免無畏爭議。</li>
+    <li>所有圖標資料由各定向行動老師自行註冊、建置、修改與刪除，平台僅提供必要技術支援與服務空間。</li>
+    <li>透過本平台尋找老師的單位或個人，或老師們之間的合作交流，請務必相互尊重，避免無謂爭議。</li>
   </ul>
 
   <h2>二、資料使用風險說明</h2>
